--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,3 @@
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #003300;
-  padding: 2vh;
-}
-header nav ul {
-  display: flex;
-  gap: 100px;
-  list-style: none;
-}
-header .search {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-header .search input {
-  border: none;
-  border-radius: 5px;
-  padding: 5px;
-}
-header .search button {
-  position: relative;
-  right: 2.2em;
-  padding: 5px 8px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
 a {
   text-decoration: none;
 }
@@ -57,12 +26,566 @@ a {
   opacity: 1;
 }
 
-html,
-body {
+header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #005800;
+  padding: 2vh;
+}
+header .menu-container {
+  position: relative;
+  display: inline-block;
+}
+header .menu-container .menu-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+header .menu-container .menu-button:hover {
+  background-color: #45a049;
+}
+header .menu-container .menu-content {
+  display: none;
+  /* Inicia com o menu fechado */
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 260px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+header .menu-container a {
+  color: black;
+  padding: 12px 28px;
+  text-decoration: none;
+  display: block;
+  transition: all 0.3s ease;
+}
+header .menu-container a:hover {
+  background-color: #f1f1f1;
+}
+header .search {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+header .search input {
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  width: 350px;
+}
+header .search button {
+  position: relative;
+  background: none;
+  right: 2.2em;
+  padding: 10px 0px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+header .container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+header img {
+  width: 100px;
+  height: auto;
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  max-height: 500px;
+  aspect-ratio: 16/8;
+  overflow: hidden;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
   height: 100%;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease, filter 0.5s ease;
+  filter: blur(5px);
+}
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slide.active {
+  opacity: 1;
+  filter: blur(0);
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+.noticias-container {
+  display: flex;
+  flex-direction: column;
+  padding: 12vh 0;
+}
+.noticias-container h1 {
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+.noticias-container h1:hover {
+  color: green;
+  font-weight: 700;
+  cursor: grab;
+}
+.noticias-container h1:active {
+  cursor: grabbing;
+}
+.noticias-container .menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2em 0;
+}
+.noticias-container .menu nav {
+  border-radius: 10px;
+  border: solid;
+  padding: 10px 40px;
+}
+.noticias-container .menu nav ul {
+  display: flex;
+  list-style: none;
+  gap: 2em;
+  align-items: center;
+}
+.noticias-container .menu nav ul li {
+  cursor: pointer;
+}
+.noticias-container .menu .active {
+  background-color: #005800;
+  padding: 5px;
+  border-radius: 10px;
+}
+.noticias-container .menu .no-active {
+  background: none;
+  padding: 0;
+  border-radius: 0;
+}
+.noticias-container .container-geral {
+  padding: none;
+}
+.noticias-container .container-geral .curiosidades .content-conteudo {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  padding: 5vh;
+  align-items: center;
+}
+.noticias-container .container-geral .curiosidades .content-conteudo .button-list button {
+  padding: 3vh;
+  border-radius: 10px;
+  border: solid;
+  cursor: pointer;
+  background: #005800;
+  color: #fff;
+  font-size: 18px;
+  transition: all 0.1s ease-in-out;
+  filter: drop-shadow(#fff 0 5px);
+}
+.noticias-container .container-geral .curiosidades .content-conteudo .button-list button:hover {
+  transform: scale(1.05);
+}
+.noticias-container .container-geral .curiosidades .content-conteudo .button-list button:hover:active {
+  transform: scaleY(0.95);
+  filter: drop-shadow(#fff 0 0px);
+}
+.noticias-container .container-geral .curiosidades .content-conteudo .text {
+  width: 50%;
+}
+.noticias-container .container-geral .noticias-importantes .content-grup {
+  display: flex;
+  grid-gap: 1em;
+  padding: 5em 2em;
+}
+.noticias-container .container-geral .noticias-importantes .content-grup .content-conteudo {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  align-items: center;
+  border: #005800 solid 3px;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+.noticias-container .container-geral .noticias-importantes .content-grup .content-conteudo:hover {
+  border: #007300 solid 3px;
+  box-shadow: #007300 0 3px 3px 0;
+}
+.noticias-container .container-geral .noticias-importantes .content-conteudo {
+  display: flex;
+  flex-direction: column;
+}
+.noticias-container .container-geral .noticias-importantes .content-conteudo h2 {
+  font-size: 1.6em;
+  font-weight: 600;
+  text-align: center;
+  padding: 0 0 10px 0;
+}
+.noticias-container .container-geral .noticias-importantes .content-conteudo p {
+  padding: 10px 0;
+}
+.noticias-container .container-geral .noticias-importantes .content-conteudo img {
+  object-fit: cover;
+  border-radius: 10px;
+}
+.noticias-container .container-geral .noticias-importantes .btn {
+  display: flex;
+  justify-content: center;
+}
+.noticias-container .container-geral .noticias-importantes .btn button {
+  background: none;
+  width: 40%;
+  border: 3px solid #005800;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+.noticias-container .container-geral .noticias-importantes .btn button:hover {
+  background: #005800;
+  border: #007300 solid 3px;
+  box-shadow: #007300 0 3px 3px 0;
+}
+.noticias-container .container-geral .noticias-importantes .btn button:active {
+  transform: scale(0.9);
+}
+.noticias-container .content {
+  display: none;
+}
+.noticias-container .content.active {
+  display: block;
+}
+
+main .sobre-o-filme .content-conteudo {
+  padding: 35px;
+}
+main .sobre-o-filme .content-conteudo .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 30px;
+  padding: 50px 0;
+}
+main .sobre-o-filme .content-conteudo .grid .item {
+  border: #005800 solid 3px;
+  border-radius: 10px;
+  padding: 10px;
+  transition: all 0.3s ease;
+}
+main .sobre-o-filme .content-conteudo .grid .item:hover {
+  border: #007400 solid 3px;
+  box-shadow: #007400 3px 3px 0 0;
+}
+main .sobre-o-filme .content-conteudo .carousel-container {
+  position: relative;
+  max-width: 600px;
+  margin: 0 auto;
+  overflow: hidden;
+  border: 2px solid #005800;
+  border-radius: 10px;
+}
+main .sobre-o-filme .content-conteudo .carousel-container .carousel {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+main .sobre-o-filme .content-conteudo .carousel-container .carousel .carousel-item {
+  min-width: 100%;
+}
+main .sobre-o-filme .content-conteudo .carousel-container .carousel .carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+main .sobre-o-filme .content-conteudo .carousel-container .carousel-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 24px;
+  z-index: 1000;
+}
+main .sobre-o-filme .content-conteudo .carousel-container .carousel-btn:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+main .sobre-o-filme .content-conteudo .carousel-container #prevBtn {
+  left: 10px;
+}
+main .sobre-o-filme .content-conteudo .carousel-container #nextBtn {
+  right: 10px;
+}
+
+main .diretor .container .tooltip-container {
+  margin: 0;
+}
+main .diretor .container .diretor-info .text-container {
+  padding: 10px 0;
+  display: flex;
+}
+main .diretor .container .diretor-info .text-container .text {
+  margin: 0 0 0 10px;
+}
+main .diretor .container .diretor-info .menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .diretor .container .diretor-info .menu ul {
+  border: solid #005800 3px;
+  border-radius: 5px;
+  padding: 10px 35px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+  gap: 70px;
+  cursor: pointer;
+}
+main .diretor .container .diretor-info .content {
+  display: none;
+}
+main .diretor .container .diretor-info .active {
+  display: block;
+}
+main .diretor .container .diretor-info .active .conteudo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 35px;
+}
+main .diretor .container .diretor-info .active .conteudo h2 {
+  font-size: 30px;
+  padding: 10px 0;
+}
+
+main .diretor .container .tooltip-container {
+  position: relative;
+  cursor: pointer;
+  transition: background 0.3s;
+  font-size: 17px;
+  padding: 1em 1.8em;
+  background-color: #005800;
+}
+main .diretor .container .tooltip-container .tooltip {
+  background-color: #005800;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-10%);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  color: #fff;
+  border-radius: 0.3em;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  font-size: 14px;
+  max-width: 100%;
+  padding: 0.5em 1em;
+  white-space: nowrap;
+}
+main .diretor .container .tooltip-container:hover .tooltip {
+  top: -100%;
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateX(-50%) translateY(0);
+}
+
+main .ano-lancamento {
+  padding: 35px 0;
+}
+main .ano-lancamento .ano-lancamento-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  color: #000;
+  padding: 5vh;
+  margin: 100px 0;
+}
+main .ano-lancamento .ano-lancamento-content h2 {
+  font-size: 15vh;
+}
+
+footer {
+  background-color: #005800;
+  padding: 5em;
+}
+footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+footer .container h2 {
+  color: rgb(4, 19, 4);
+}
+footer .container img {
+  width: 100px;
+  padding: 10px;
+}
+footer .container ul {
+  list-style: none;
+}
+footer .container ul a {
+  color: #fff;
+}
+footer .container .trabalhador p {
+  padding: 10px 0;
+}
+footer .container .search {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+footer .container .search input {
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  width: 350px;
+}
+footer .container .search button {
+  position: relative;
+  background: none;
+  right: 2.2em;
+  padding: 10px 0px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+footer .container .projeto {
+  padding: 40px 0;
+}
+
+.autorais {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 10px;
+  background-color: #fff;
+  color: #000;
+}
+
+main .elenco .conainer-elenco {
+  display: flex;
+  align-items: center;
+  padding: 3em 0;
+  justify-content: space-around;
+}
+main .elenco .conainer-elenco div {
+  width: 60%;
+}
+main .elenco .conainer-elenco img {
+  width: 15%;
+  border-radius: 10px;
+}
+main .elenco h2 {
+  padding: 10px;
+  text-align: center;
+}
+
+main .trailer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+main .trailer iframe {
+  width: 70%;
+  padding: 45px;
+  border-radius: 70px;
+}
+main .trailer h2 {
+  padding: 25px;
+  text-align: center;
+}
+
+@media (max-width: 700px) {
+  header {
+    flex-direction: column;
+  }
+  header .container {
+    padding: 10px 0;
+  }
+  main .container-geral .noticias-importantes .content-grup {
+    flex-direction: column;
+  }
+  main .container-geral .noticias-importantes .content-grup .content-conteudo img {
+    width: 100%;
+  }
+  main .sobre-o-filme .content-conteudo {
+    padding: 35px;
+  }
+  main .sobre-o-filme .content-conteudo .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  main .diretor .container .tooltip-container {
+    display: none;
+  }
+  footer .container {
+    flex-direction: column;
+  }
+}
+* {
   margin: 0;
   padding: 0;
+}
+
+html,
+body {
+  transition: all 0.3s ease-in-out;
+  height: 100%;
+  background: #171717;
   font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-size: 20px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
 }
 
 /*# sourceMappingURL=style.css.map */
