--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,15 +1,46 @@
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     background-color: $header_footer;
     padding: 2vh;
 
-    nav {
-        ul {
-            display: flex;
-            gap: 100px;
-            list-style: none;
+    .menu-container {
+        position: relative;
+        display: inline-block;
+
+        .menu-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #45a049;
+            }
+        }
+
+        .menu-content {
+            display: none;
+            /* Inicia com o menu fechado */
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 260px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        a {
+            color: black;
+            padding: 12px 28px;
+            text-decoration: none;
+            display: block;
+            transition: all 0.3s ease;
+
+            &:hover {
+                background-color: #f1f1f1;
+            }
         }
     }
 
@@ -17,18 +48,34 @@ header {
         display: flex;
         align-items: center;
         position: relative;
+
         input {
             border: none;
             border-radius: 5px;
-            padding: 5px;
+            padding: 10px;
+            width: 350px;
         }
+
         button {
             position: relative;
+            background: none;
             right: 2.2em;
-            padding: 5px 8px;
+            padding: 10px 0px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
     }
+
+    .container {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
+
+    img {
+        width: 100px;
+        height: auto;
+    }
+
 }
