--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,12 +1,38 @@
 @import './variaveis.scss';
-@import './header.scss';
 @import './menu_link.scss';
+@import './header.scss';
+@import './slider-main.scss';
+@import './noticias-container.scss';
+@import './sobre-o-filme.scss';
+@import './diretor.scss';
+@import './tooltip.scss';
+@import './ano-de-lancamento.scss';
+@import './footer.scss';
+@import './autorais.scss';
+@import './elenco.scss';
+@import './trailer.scss';
+@import './responsivo.scss';
 
+
+* {
+    margin: 0;
+    padding: 0;
+}
 
 html,
 body {
+    transition: all 0.3s ease-in-out;
     height: 100%;
-    margin: 0;
-    padding: 0;
+    background: #171717;
     font-family: 'Roboto', sans-serif;
+    color: #fff;
+    font-size: 20px;
+}
+
+nav {
+    ul {
+        display: flex;
+        list-style: none;
+        justify-content: space-around;
+    }
 }
